[package]
name = "flash-mint-provider"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "dharitri-wasm-node",]

[dependencies.dharitri-wasm]
version = "0.6.3"

[dependencies.dharitri-wasm-derive]
version = "0.6.3"

[dependencies.dharitri-wasm-node]
version = "0.6.3"
optional = true

[dev-dependencies.dharitri-wasm-debug]
version = "0.6.3"
